java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/CreateElementTest/test190447b.pass
package org.netbeans.test.java.hints;

public class Bug190447<E> {
    
    private <T> void t() {
        Iterable<? extends String> t = test();
        t2 = this.<T>test2();
        t3 = this.<E>test2();
    }

    public Iterable<? extends String> test() {
        return null;
    }

    public <T> Iterable<? extends T> test2() {
        return null;
    }
    
}
